--- a/index.html
+++ b/index.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/plugins.css">
-    <link rel="stylesheet" href="./css/main.css">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="./css/plugins.css" />
+    <link rel="stylesheet" href="./css/main.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>Blizzard Landing Page</title>
+  </head>
+  <body>
+    <div class="container">
+      <!-- <a href="" class="btn btn-primary">
+        <img src="./assets/img/icon-perfil.svg" alt="" />
+        <span>Logar</span>
+      </a>
+      <a href="" class="btn btn-outline">Criar conta</a> -->
+      <a href="" class="game-card">
+        <div class="image">
+          <img src="assets/img/card-game-01.jpg" alt="">
+        </div>
+        <div class="info">
+          <h3>Diablo II: Resurrected</h3>
+          <span>RPG de ação</span>
+        </div>
+      </a>
+    </div>
     <script src="./js/plugins.js"></script>
     <script src="./js/all.js"></script>
-</body>
+  </body>
 </html>
