--- a/index.html
+++ b/index.html
@@ -16,22 +16,53 @@
     <title>Blizzard Landing Page</title>
   </head>
   <body>
-    <div class="container">
-      <!-- <a href="" class="btn btn-primary">
-        <img src="./assets/img/icon-perfil.svg" alt="" />
-        <span>Logar</span>
-      </a>
-      <a href="" class="btn btn-outline">Criar conta</a> -->
-      <a href="" class="game-card">
-        <div class="image">
-          <img src="assets/img/card-game-01.jpg" alt="">
+    <header>
+      <div class="container">
+        <div class="left-container">
+          <a href="#" class="logo">
+            <img src="./assets/img/logo.svg" alt="Logo da Blizzard" title="Logo da Blizzard">
+          </a>
+          <nav>
+            <ul>
+              <li>
+                <a href="">
+                  <span>Jogos</span>
+                  <img src="./assets/img/arrow-down.svg" alt="Ícone de seta">
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <span>Esportes</span>
+                  <img src="./assets/img/arrow-down.svg" alt="Ícone de seta">
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <span>Loja</span>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <span>Notícias</span>
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <span>Suporte</span>
+                </a>
+              </li>
+            </ul>
+          </nav>
         </div>
-        <div class="info">
-          <h3>Diablo II: Resurrected</h3>
-          <span>RPG de ação</span>
+        <div class="right-container">
+          <a href="" class="btn btn-outline">Criar conta</a>
+          <a href="" class="btn btn-primary">
+            <img src="assets/img/icon-perfil.svg" alt="Ícone de perfil">
+            <span>Logar</span>
+          </a>
         </div>
-      </a>
-    </div>
+      </div>
+    </header>
     <script src="./js/plugins.js"></script>
     <script src="./js/all.js"></script>
   </body>
