--- a/index.html
+++ b/index.html
@@ -63,6 +63,79 @@
         </div>
       </div>
     </header>
+
+    <section class="s-hero">
+      <div class="slide-principal">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide slide-01">
+            <div class="container">
+              <div class="left-content">
+                <h2>Retorne à escuridão com o game Diablo IV</h2>
+                <p>O retorno de Lilith traz uma era de escuridão e sofrimento</p>
+                <a href="" class="btn btn-primary">Jogue agora</a>
+              </div>
+              <div class="right-content">
+                <div class="logo">
+                  <img src="assets/img/logo-default-diablo-iv.png" alt="Logo Diablo IV">
+                </div>
+                <div class="video">
+                  <span>Assista o trailer</span>
+                  <button class="btn-video">
+                    <img src="assets/img/thumbnail-diablo.png" class="thumb default" alt="Thumbnail do gif">
+                    <img src="assets/img/gifs/giphy.gif" class="thumb hover" alt="Gif">
+                    <div class="icon"><img src="assets/img/icon-play.svg" alt="Ícone de play"></div>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide slide-02">
+            <div class="container">
+              <div class="left-content">
+                <h2>Novo pacote de expansão de Hearthstone</h2>
+                <p>A Horda e a Aliança se encontraram no Vale Alterac para lutar</p>
+                <a href="" class="btn btn-primary">Reserve agora na pré-venda</a>
+              </div>
+              <div class="right-content">
+                <div class="logo">
+                  <img src="assets/img/logo-heathstone-masters.png" alt="Logo Diablo IV">
+                </div>
+                <div class="video">
+                  <span>Assista o trailer</span>
+                  <button class="btn-video">
+                    <img src="assets/img/thumb-hearthstone.png" class="thumb default" alt="Thumbnail do gif">
+                    <img src="assets/img/gifs/heartstone.gif" class="thumb hover" alt="Gif">
+                    <div class="icon"><img src="assets/img/icon-play.svg" alt="Ícone de play"></div>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-slide slide-03">
+            <div class="container">
+              <div class="left-content">
+                <h2>Desbrave as Terras Sombrias em Shadowlands! </h2>
+                <p>O que jaz além do mundo que você conhece?</p>
+                <a href="" class="btn btn-primary">Reserve agora na pré-venda</a>
+              </div>
+              <div class="right-content">
+                <div class="logo">
+                  <img src="assets/img/logo-default-ww.png" alt="Logo Diablo IV">
+                </div>
+                <div class="video">
+                  <span>Assista o trailer</span>
+                  <button class="btn-video">
+                    <img src="assets/img/thumb-shadowlands.png" class="thumb default" alt="Thumbnail do gif">
+                    <img src="assets/img/gifs/bolvar-sylvanas.gif" class="thumb hover" alt="Gif">
+                    <div class="icon"><img src="assets/img/icon-play.svg" alt="Ícone de play"></div>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="./js/plugins.js"></script>
     <script src="./js/all.js"></script>
   </body>
