--- a/index.html
+++ b/index.html
@@ -65,6 +65,25 @@
     </header>
 
     <section class="s-hero">
+      <div class="slide-thumbnail">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="/assets/img/logo-xs-diablo-iv.png" alt="Logo diablo">
+          </div>
+          <div class="swiper-slide">
+            <img src="/assets/img/logo-xs-heartstone.png" alt="Logo heartstone">
+          </div>
+          <div class="swiper-slide">
+            <img src="/assets/img/logo-xs-ww.png" alt="Logo warcraft">
+          </div>
+          <div class="swiper-slide disabled">
+            <img src="/assets/img/logo-xs-diablo-imortal.png" alt="Logo warcraft">
+          </div>
+          <div class="swiper-slide disabled">
+            <img src="/assets/img/logo-xs-starfield.png" alt="Logo warcraft">
+          </div>
+        </div>
+      </div>
       <div class="slide-principal">
         <div class="swiper-wrapper">
           <div class="swiper-slide slide-01">
